--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
-    "@material-ui/core": "^4.12.3",
+    "@material-ui/core": "^5.0.0-beta.5",
     "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/styled-engine-sc": "^5.0.0-beta.5",
     "@material-ui/styles": "^4.11.4",
     "@mui/material": "^5.0.0",
     "@testing-library/jest-dom": "^5.14.1",
@@ -19,6 +20,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
