--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.3",
+    "hookrouter": "^1.2.5",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-amap": "^1.2.8",
