--- a/.drone.yml
+++ b/.drone.yml
@@ -42,6 +42,7 @@ steps:
   - name: build
     image: node:16
     commands:
+      - export REACT_APP_DITTO_API_URL=http://$${BASE_URL}:34080/
       # TODO: Remove all warnings
       - CI=false npm run build
 
