--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@material-ui/styles": "^4.11.4",
     "@monaco-editor/react": "^4.2.2",
     "@mui/material": "^5.0.0",
+    "@mui/styles": "^5.1.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -20,9 +21,11 @@
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-amap": "^1.2.8",
+    "react-chartjs-2": "^3.3.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "recharts": "^2.1.6",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2"
   },
