--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@material-ui/styled-engine-sc": "^5.0.0-beta.5",
     "@material-ui/styles": "^4.11.4",
     "@monaco-editor/react": "^4.3.1",
+    "@mui/icons-material": "^5.2.1",
     "@mui/material": "^5.0.0",
     "@mui/styles": "^5.1.1",
     "@testing-library/jest-dom": "^5.14.1",
