--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.3",
+    "csv-parse": "^5.0.3",
     "hookrouter": "^1.2.5",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-amap": "^1.2.8",
